--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "pinia": "^2.1.7",
     "sass": "^1.79.3",
     "vue": "^3.4.29",
